# chat-orch

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  REFACTOR_PROMPT.md  TECHNICAL.md  docker-compose.yml
benches/: throughput.rs
docker/: Caddyfile  Dockerfile  conversation-chat.Dockerfile  seed.sql  tenant.Dockerfile
docker/k6/: load_test.js
docs/: api-contracts.md  downstream-contracts.md  go-team-blocker-escalation.md  message-type-matrix.md  openapi.yaml  tenant_acr_requirements_v2.docx.md
mock-services/acr-service/: app.py
mock-services/graph-api/: app.py
mock-services/tenant-service/: app.py
scripts/: clone-services.sh  set_telegram_webhook.sh
src/: config.rs  conversation.rs  error.rs  gateway.rs  hospital.rs  lib.rs  llm.rs  main.rs  router.rs  routes.rs  runtime.rs  session.rs  sse.rs  state.rs  telegram.rs
src/auth/: api_key.rs  jwt.rs  mod.rs  rest.rs
src/gateway/: AGENTS.md  acr_client.rs  channel_cache.rs  config_cache.rs  mod.rs  reply_sender.rs  tenant_client.rs  tool_registry_cache.rs
src/ingest/: AGENTS.md  mod.rs  telegram.rs  telegram_polling.rs  telegram_sender.rs  telegram_types.rs  whatsapp.rs  whatsapp_sender.rs  whatsapp_types.rs
src/llm/: AGENTS.md  client.rs  mod.rs  tool_executor.rs  turn_loop.rs
src/pipeline/: AGENTS.md  dedup.rs  mod.rs  session.rs  worker.rs
src/types/: AGENTS.md  agent_response.rs  ingest_message.rs  message_content.rs  mod.rs  resolved_message.rs  session.rs  tenant.rs
tests/: health_test.rs  telegram_webhook_test.rs  tool_definitions_test.rs  types_test.rs  whatsapp_webhook_test.rs
