[package]
name = "chat-orch"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "General Orchestrator — thin HTTP forwarder from frontend to conversation-chat"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

# HTTP client (downstream: conversation-chat)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
